--- a/install/kubernetes/cilium/templates/cilium-operator/service.yaml
+++ b/install/kubernetes/cilium/templates/cilium-operator/service.yaml
@@ -1,4 +1,4 @@
-{{- if and .Values.operator.enabled .Values.operator.prometheus.enabled }}
+{{- if and .Values.operator.enabled .Values.operator.prometheus.enabled .Values.operator.prometheus.metricsService }}
 kind: Service
 apiVersion: v1
 metadata:
